[package]
name = "pg_stats_exporter"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"

[[bin]]
name = "pg_stats_exporter"
path = "src/bin/pg_stats_exporter.rs"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.0"
clap = { version = "4.0", features = ["derive"] }
http = "0.2.9"
hyper = { version = "0.14.26", features = ["stream"] }
hyper-tungstenite = "0.11"
nix = "0.26"
once_cell = "1.13"
postgres = "0.19.7"
prometheus = {version = "0.13", default_features=false, features = ["process"]} # removes protobuf dependency
routerify = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "2.0"
tls-listener = { version = "0.7", features = ["rustls", "hyper-h1"] }
thiserror = "1.0"
tokio = { version = "1.17", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tokio-io-timeout = "1.2.0"
tokio-rustls = "0.24"
tokio-stream = "0.1"
tokio-tar = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3", default_features = false, features = ["smallvec", "fmt", "tracing-log", "std", "env-filter", "json"] }
